--- a/apps/blood-pressure/package.json
+++ b/apps/blood-pressure/package.json
@@ -28,7 +28,7 @@
         "chart.js": "^4.4.1",
         "date-fns": "^3.3.0",
         "framer-motion": "^10.18.0",
-        "next": "^14.1.0",
+        "next": "=14.0.4",
         "next-pwa": "^5.6.0",
         "next-themes": "^0.2.1",
         "react": "18.2.0",
