--- a/apps/macro/public/manifest.json
+++ b/apps/macro/public/manifest.json
@@ -22,7 +22,7 @@
     {
       "src": "assets/icon/icon.png",
       "type": "image/png",
-      "sizes": "512x512 144x144",
+      "sizes": "512x512 144x144 192x192",
       "purpose": "maskable"
     },
     {
